@@ -1,5 +1,9 @@
 2008-12-03  Curtis Gedak  <gedakc@gmail.com>
 
+	* src/Dialog_Partition_Info.cc,
+	  src/Win_GParted.cc: Made text by field labels selectable.
+	  - Useful for copy/paste of UUID or volume label
+
 	* include/Utils.h,
 	  src/Utils.cc: Added text selectable parameter to mk_label()
 
